syntax = "proto3";

package auth.v1;

option go_package = "github.com/giia/giia-core-engine/services/auth-service/api/proto/gen/go/auth/v1;authv1";

// UserInfo contains authenticated user information
message UserInfo {
  string user_id = 1;
  string organization_id = 2;
  string email = 3;
  repeated string roles = 4;
  string name = 5;
  string status = 6;
  string first_name = 7;
  string last_name = 8;
}

// Permission represents a single permission
message Permission {
  string code = 1;
  string description = 2;
  string service = 3;
  string resource = 4;
  string action = 5;
}
